--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.1.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
