--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "next": "14.2.13",
         "react": "^18",
         "react-dom": "^18",
+        "react-router-dom": "^6.26.2",
         "sass": "^1.79.4"
     },
     "devDependencies": {
